<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="#B1ABAB"
    tools:context=".view.CadAnimeActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_cad_anime"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_marginBottom="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_nome_anime"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="6sp"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_num_epi"
                android:textSize="15sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginTop="6sp"
                android:layout_marginBottom="10sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_genero"
                android:textSize="15sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="6sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome_anime"
                android:textColorHint="#000"
                android:background="#fff"
                android:layout_margin="5sp"
                android:id="@+id/editNome"
                android:layout_marginBottom="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_num_anime"
                android:textColorHint="#000"
                android:background="#fff"
                android:layout_margin="5sp"
                android:inputType="number"
                android:id="@+id/editEpi"
                android:layout_marginBottom="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_genero"
                android:textColorHint="#000"
                android:background="#fff"
                android:inputType="textLongMessage"
                android:layout_margin="5sp"
                android:id="@+id/editGenero"
                android:layout_marginBottom="20sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cad"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#E6F74E04"
            android:layout_margin="5sp"
            android:onClick="concluir"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cancelar"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#E6F74E04"
            android:layout_margin="5sp"
            android:onClick="voltar"
            />
    </LinearLayout>
</LinearLayout>
