<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#B1ABAB"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_entrar"
        android:onClick="entrar"
        android:layout_marginTop="150sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#E6F74E04"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sair"
        android:onClick="sair"
        android:layout_marginTop="50sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#E6F74E04"
        />

</LinearLayout>